--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.4",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "^7.5.5",
@@ -51,8 +51,8 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "^13.3.1",
+    "@angular-devkit/build-angular": "^14.2.9",
+    "@angular/cli": "^14.0.0",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "13.3.1",
     "@types/bootstrap": "4.5.0",
@@ -71,8 +71,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "sass": "1.32.13",
     "protractor": "7.0.0",
+    "sass": "1.32.13",
     "ts-node": "~10.7.0",
     "tslint": "6.1.3",
     "typescript": "~4.4.2"
