--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
